--- a/myapp/views/index.jade
+++ b/myapp/views/index.jade
@@ -3,3 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  script(src='/javascripts/sample01_test_jquery.js')
+  img(src="/testing/sample01.jpg")
