--- a/myapp/views/layout.jade
+++ b/myapp/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/testing/sample01.css')
+    script(src='https://code.jquery.com/jquery-2.1.4.js')
     script(src='/testing/sample01.js')
     script(src='/javascripts/sample01.js')
     script(src='/javascripts/sample01_sleep.js')
