--- a/myapp/views/index.jade
+++ b/myapp/views/index.jade
@@ -5,3 +5,4 @@ block content
   p Welcome to #{title}
   script(src='/javascripts/sample01_test_jquery.js')
   img(src="/testing/sample01.jpg")
+  img(src="/testing/sample01.jpg")
