--- a/myapp/views/index.jade
+++ b/myapp/views/index.jade
@@ -5,4 +5,8 @@ block content
   p Welcome to #{title}
   script(src='/javascripts/sample01_test_jquery.js')
   img(src="/testing/sample01.jpg")
-  img(src="/testing/sample01.jpg")
+  script.
+    function imageLoaded(e){
+        console.log('Image Loaded!', e);
+    }
+  img(src="/testing/sample01.jpg", onload="imageLoaded();")
